Mon Mar 01 08:25:45 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: remove en_DK, will add after string freeze.
	  Not a string that is actually displayed, I was just adding it to
	  the translation matrix

Mon Mar 01 08:21:37 2004  George Lebl <jirka@5z.com>

	* Makefile.am: Patch from Glynn Foster to fix installation of
	  gdmsetup-security

Sun Feb 29 10:30:35 2004  George Lebl <jirka@5z.com>

	* gui/greeter/greeter.c, gui/greeter/greeter_action_language.[ch]:
	  While investigating speed issues with language dialog make init
	  lazy and show the dialog before filling it with stuff to make it
	  seem like something is happening.

Sun Feb 29 10:02:51 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: Make gdm know about en_DK

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* gui/gdmlanguages.c (languages): 

	* config/locale.alias: Add Canadian English (fixes #135053) --
	patch by Adam Weinberger <adamw@freebsd.org>.

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* config/locale.alias: Add Serbian variants (#135232).

	* gui/gdmlanguages.c (languages): Added Serbian variants (#135232).

Tue Feb 24 14:44:29 2004  George Lebl <jirka@5z.com>

	* gui/gdmlanguages.c: lookup if we have code.enc@mod, try
	  code@mod after code.enc@mod and before code.enc and code
	  adresses #135232

2004-02-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

Fri Feb 20 10:03:42 2004  George Lebl <jirka@5z.com>

	* display.c, server.[ch], slave.c: When restarting a server by
	  whacking it and starting it again, wait at least one second to
	  allow things to "settle".  If local display is busy try again once
	  in 2 secs before resorting to telling the user so.  Be much milder
	  in whacking X's lock files / sockets to avoid whacking actual
	  locks / sockets when displays are in fact busy and used, that is,
	  only whack locks / sockets when we in fact successfully started
	  a server.
